@@ -459,4 +459,409 @@ After GC: {}
 | **Collections (`WeakHashMap`)** | ❌ No | ✅ Yes |
 
 ---
+#### Explain Young Generation vs Old Generation in Heap Memory ?
+
+In Java, heap memory is divided into different regions to optimize garbage collection. The two main sections are:
+
+1. **Young Generation (YoungGen)**
+2. **Old Generation (OldGen)**
+
+#### Young Generation (YoungGen)
+- Stores **newly created objects**.
+- Divided into three parts:
+  - **Eden Space**: Where new objects are allocated.
+  - **Survivor Space S0 (Survivor 0)**
+  - **Survivor Space S1 (Survivor 1)**
+- Uses **Minor Garbage Collection (Minor GC)**, which is frequent and fast.
+- Objects that survive multiple Minor GCs move to the **Old Generation**.
+
+#### Old Generation (OldGen)
+- Stores **long-lived objects** that survived multiple Minor GCs.
+- Uses **Major Garbage Collection (Major GC) / Full GC**, which is less frequent but slower.
+- If OldGen is full, an **OutOfMemoryError** occurs.
+
+#### Memory Flow Example
+| Step | Object Location | Action |
+|------|---------------|--------|
+| 1 | New Object | Allocated in **Eden Space** |
+| 2 | Minor GC | Surviving objects move to **Survivor S0** |
+| 3 | Another Minor GC | Surviving objects move to **Survivor S1** |
+| 4 | Multiple Minor GCs | Objects that survive move to **Old Generation** |
+| 5 | Major GC | Cleans up long-lived objects in **Old Generation** |
+
+#### Key Differences Between YoungGen and OldGen
+| Feature | Young Generation | Old Generation |
+|---------|-----------------|---------------|
+| Object Type | Short-lived | Long-lived |
+| Garbage Collection | Minor GC (fast) | Major GC / Full GC (slow) |
+| Frequency | Frequent | Less frequent |
+| Subdivisions | Eden, Survivor S0, Survivor S1 | No subdivisions |
+| Effect on Performance | Less impact | Can cause application pauses |
+
+#### Code Example
+```java
+public class MemoryDemo {
+    public static void main(String[] args) {
+        // Step 1: Creating a large number of short-lived objects
+        for (int i = 0; i < 100_000; i++) {
+            String temp = new String("Temporary Object " + i);
+        } // These objects will be collected by Minor GC
+
+        // Step 2: Creating a long-lived object
+        String[] longLivedObjects = new String[100_000];
+        for (int i = 0; i < longLivedObjects.length; i++) {
+            longLivedObjects[i] = new String("Persistent Object " + i);
+        }
+        
+        // These objects will move to Old Generation after surviving multiple GCs
+        System.out.println("Objects allocated successfully!");
+    }
+}
+```
+---
+#### Image Representation for Young Generation and Old Generation :
+![Mark and Sweep Algoritham Working](Images/Garbage_Collection_Mark_And_Sweep_Algoritham.png)
+
+#### Where are Objects Created in Java?
+In **Java**, objects are **always** created in the **Heap Memory**, while references (variables pointing to objects) are stored in the **Stack Memory**.
+
+---
+
+#### **Example: Object Storage in Heap and Stack**
+
+```java
+class Person {
+    String name;
+}
+
+public class MemoryDemo {
+    public static void main(String[] args) {
+        Person p1 = new Person();  // "new Person()" creates an object in the Heap.
+        Person p2 = p1;  // p2 also stores reference to the same Heap object.
+    }
+}
+```
+
+#### **Memory Allocation Breakdown**
+
+| Memory Type | Stored Items |
+|------------|-------------|
+| **Heap** | `new Person()` (actual object) |
+| **Stack** | `p1` (reference to the object) |
+| **Stack** | `p2` (another reference to the same object) |
+
+---
+
+#### **Visual Representation**
+![Heap Explanation](Images/Garbage_Collector_Heap_Explanation.png)
+
+---
+
+#### Who Manages the Garbage Collector?
+The **Garbage Collector (GC)** in Java is managed by the **Java Virtual Machine (JVM)**.
+
+#### Key Points
+- The **JVM** is responsible for automatically handling memory management.
+- The **Garbage Collector** runs as a **background thread**, reclaiming memory from objects that are no longer reachable.
+- The **developer cannot force** garbage collection but can suggest it using `System.gc()` or `Runtime.getRuntime().gc()`. However, execution is **not guaranteed**.
+
+---
+
+
+#### When Do Objects Become Eligible for Garbage Collection?
+An object in Java becomes **eligible for garbage collection (GC)** when it is no longer reachable by any active thread or static reference. Below are the different ways objects can become eligible for GC.
+
+---
+#### different Ways 
+- Explicit `null` assignment
+- Reassigning references
+- Method-local objects
+- Island of isolation
+- Anonymous objects
+- Weak references
+- Class unloading
+
+#### 1. Nullifying the Reference
+If a reference is explicitly set to `null`, the object becomes unreachable.
+
+```java
+class Test {
+    public static void main(String[] args) {
+        String s = new String("Hello");
+        s = null;  // Now "Hello" object is eligible for GC
+    }
+}
+```
+
+---
+
+#### 2. Reassigning a Reference Variable
+If an object reference is reassigned to another object, the old object becomes unreachable.
+
+```java
+class Test {
+    public static void main(String[] args) {
+        String s1 = new String("Java");
+        s1 = new String("Python");  // "Java" object is now eligible for GC
+    }
+}
+```
+
+---
+
+#### 3. Objects Inside Method Scope (Local Objects)
+Objects created inside a method become unreachable once the method finishes execution.
+
+```java
+class Test {
+    void method() {
+        String s = new String("Temporary");  // Eligible for GC after method exits
+    }
+
+    public static void main(String[] args) {
+        Test t = new Test();
+        t.method();  
+    }
+}
+```
+
+---
+
+#### 4. Island of Isolation
+Two or more objects referencing each other but not referenced by any active thread form an **island of isolation** and become eligible for GC.
+
+```java
+class Test {
+    Test t;
+    public static void main(String[] args) {
+        Test t1 = new Test();
+        Test t2 = new Test();
+
+        t1.t = t2;
+        t2.t = t1;
+
+        t1 = null;
+        t2 = null;  // Now both objects are unreachable and eligible for GC
+    }
+}
+```
+
+---
+
+#### 5. Anonymous Objects
+Objects created without references become eligible for GC immediately after use.
+
+```java
+class Test {
+    public static void main(String[] args) {
+        new String("Anonymous");  // Eligible for GC immediately after execution
+    }
+}
+```
+
+---
+
+#### 6. Weak References (Explicit GC)
+Objects referenced only by **WeakReference** or **SoftReference** may be garbage collected when memory is needed.
+
+```java
+import java.lang.ref.WeakReference;
+
+class Test {
+    public static void main(String[] args) {
+        WeakReference<String> weakRef = new WeakReference<>(new String("Weak Reference"));
+        System.gc();  // "Weak Reference" object may be GC'd
+    }
+}
+```
+
+---
+
+#### 7. Class Unloading (Static Reference Removal)
+If a class loader is removed and all static references are cleared, its loaded classes and static objects may be garbage collected.
+
+---
+
+#### **Is the Garbage Collector a Foreground or Background Thread?**
+The **Garbage Collector (GC) in Java runs as a background thread**. It is a **low-priority daemon thread** managed by the JVM.
+
+---
+
+The following code demonstrates when the garbage collector runs:
+
+```java
+class GCExample {
+    @Override
+    protected void finalize() throws Throwable {
+        System.out.println("Garbage Collector is running...");
+    }
+
+    public static void main(String[] args) {
+        GCExample obj = new GCExample();
+        obj = null; // Make object eligible for GC
+        System.gc(); // Suggest GC execution
+    }
+}
+```
+
+**Output (if GC runs):**
+```bash
+Garbage Collector is running...
+```
+---
+
+#### What are the benifits of MetaSpace in java 8 ?
+
+##### PermGen Memory
+- **PermGen (Permanent Generation)** is a special space in the Java heap, separated from the main memory.
+- It stores **static content** and **application metadata** required by the JVM.
+- **Metadata** is data used to describe other data.
+- **Garbage collection** occurs in PermGen like any other memory region.
+- **String pool** was stored in PermGen before Java 7.
+- The **Method Area** is part of PermGen, used for storing class structure and method/constructor code.
+- **Disadvantages of PermGen:**
+  - **Fixed size** leads to `OutOfMemoryError`.
+  - **Default size**: 64 MB (32-bit JVM) and 82 MB (64-bit JVM).
+  - **Frequent garbage collection** increases JVM overhead.
+  - **Manual resizing** is possible, but PermGen **cannot auto-increase**.
+  - **Garbage collection is inefficient** in cleaning PermGen memory.
+
+##### MetaSpace (Introduced in Java 8)
+- **MetaSpace replaces PermGen** from Java 8 onwards.
+- **MetaSpace grows automatically by default**, unlike PermGen.
+- **Garbage collection** is triggered automatically **when class metadata usage reaches the maximum MetaSpace size**.
+- **Solves PermGen limitations**, offering better performance and flexibility.
+
+By replacing **PermGen with MetaSpace**, Java 8 improves memory management, reduces `OutOfMemoryError` risks, and optimizes garbage collection efficiency.
+
+# Types of Garbage Collectors in Java
+
+Java provides several types of **Garbage Collectors**, each optimized for different use cases:
+
+---
+
+#### **1. Serial Garbage Collector**  
+- Uses a **single thread** for garbage collection.  
+- Best suited for **small applications** running on **single-core CPUs**.  
+- **JVM Option:** `-XX:+UseSerialGC`
+
+---
+
+#### **2. Parallel Garbage Collector (Throughput Collector)**  
+- Uses **multiple threads** to perform garbage collection.  
+- Focuses on **maximizing application throughput** by minimizing the time spent in garbage collection.  
+- Best for **multi-core processors** with **medium to large heaps**.  
+- **JVM Option:** `-XX:+UseParallelGC`
+
+---
+
+#### **3. CMS (Concurrent Mark-Sweep) Garbage Collector** (Deprecated in Java 9, Removed in Java 14)  
+- Runs **mostly concurrently** with the application to **reduce stop-the-world pauses**.  
+- Reduces **latency** but has **higher CPU overhead**.  
+- **JVM Option:** `-XX:+UseConcMarkSweepGC`
+
+---
+
+#### **4. G1 (Garbage First) Garbage Collector** (Default from Java 9 onwards)  
+- Designed for **low-latency applications** with **large heaps**.  
+- Divides the heap into **regions** and prioritizes garbage collection in regions with the most garbage.  
+- Reduces **full GC pauses** by **incremental cleanup**.  
+- **JVM Option:** `-XX:+UseG1GC`
+
+---
+
+#### **5. Z Garbage Collector (ZGC)** (Introduced in Java 11, Improved in later versions)  
+- **Ultra-low-latency GC** with **pause times under 10ms**, even for **large heaps (TB scale)**.  
+- Performs **most work concurrently** without stopping the application.  
+- **JVM Option:** `-XX:+UseZGC`
+
+---
+
+#### **6. Shenandoah Garbage Collector** (Introduced in Java 12)  
+- Similar to ZGC, designed for **low-pause-time garbage collection**.  
+- Uses **concurrent compaction** to keep pauses very short.  
+- **JVM Option:** `-XX:+UseShenandoahGC`
+
+---
+
+#### **Comparison Table**
+| **Garbage Collector** | **Best For** | **Pause Time** | **Heap Size** |
+|----------------------|-------------|---------------|--------------|
+| **Serial GC** | Small apps, single-threaded programs | High | Small |
+| **Parallel GC** | High-throughput apps, batch processing | Medium | Medium to Large |
+| **CMS GC** (Deprecated) | Low-latency apps (before Java 9) | Low | Medium to Large |
+| **G1 GC** (Default in Java 9+) | General-purpose, balanced performance | Low | Large |
+| **ZGC** | Large heap, ultra-low-latency apps | Very Low (<10ms) | Huge (TB-scale) |
+| **Shenandoah GC** | Low-latency workloads | Very Low | Medium to Large |
+
+---
+
+
+#### What are the Differences between Serial Garbage Collector and Parallel Garbage Collector ?
+
+| Feature | Serial Garbage Collector | Parallel Garbage Collector |
+|---------|-------------------------|----------------------------|
+| **Thread Usage** | Uses a **single thread** | Uses **multiple threads** |
+| **Best For** | Small applications, single-core CPUs | Large applications, multi-core CPUs |
+| **Pause Time** | Higher pause time | Lower pause time due to parallelism |
+| **Throughput** | Lower, as only one thread works at a time | Higher, as multiple threads share the workload |
+| **JVM Option** | `-XX:+UseSerialGC` | `-XX:+UseParallelGC` |
+
+---
+
+#### **What are the Differences Between Serial and Parallel Garbage Collectors?**
+| Feature | Serial Garbage Collector | Parallel Garbage Collector |
+|---------|-------------------------|----------------------------|
+| **Thread Usage** | Uses a **single thread** | Uses **multiple threads** |
+| **Best For** | Small applications, single-core CPUs | Large applications, multi-core CPUs |
+| **Pause Time** | Higher pause time | Lower pause time due to parallelism |
+| **Throughput** | Lower, as only one thread works at a time | Higher, as multiple threads share the workload |
+| **JVM Option** | `-XX:+UseSerialGC` | `-XX:+UseParallelGC` |
+
+---
+
+
+
+#### **Why G1 Replaced Parallel GC as the Default (Java 9+)**
+| Feature | Parallel GC (Before Java 9) | G1 GC (Default from Java 9) |
+|---------|----------------------------|----------------------------|
+| **Pause Time** | Unpredictable, can be long | More predictable, lower pauses |
+| **Heap Management** | Fixed generations (Young, Old) | Dynamically divided into **regions** |
+| **Stop-the-World Events** | Long for large heaps | Splits GC work into smaller tasks |
+| **Compaction** | Performed during full GC | **Concurrent compaction**, reducing pauses |
+
+---
+
+#### **How G1 GC Divides the Heap into Regions Dynamically?**
+
+Unlike **Parallel GC**, which splits the heap into **fixed generations**, **G1 GC divides the heap into equal-sized regions** dynamically and assigns them roles based on application behavior.
+
+#### **Heap Structure in G1 GC**
+| **Region Type** | **Purpose** |
+|---------------|------------|
+| **Eden** | Stores newly allocated objects (short-lived) |
+| **Survivor** | Holds objects surviving minor GCs before promotion to Old Gen |
+| **Old** | Stores long-lived objects |
+| **Humongous** | Stores very large objects that don't fit in a single region |
+| **Unused (Free)** | Empty regions available for allocation |
+
+#### **How G1 GC Works Dynamically?**
+1. **Initial Allocation**: Eden, Survivor, and Old regions are assigned at startup.
+2. **Dynamic Region Adjustment**: G1 **monitors object survival rates** and **adjusts region sizes dynamically**.
+3. **Garbage Collection Process**:
+   - **Young GC (Minor GC)**: Cleans **Eden and Survivor** regions.
+   - **Mixed GC**: Collects **both Young and some Old** regions selectively.
+   - **Concurrent GC**: Runs in the background to clean Old Gen without stopping the application.
+4. **Humongous Object Handling**: Objects larger than 50% of a region are stored in **Humongous Regions**.
+5. **Heap Compaction (Automatic Defragmentation)**: Moves live objects to free up fragmented space, reducing the need for Full GC.
+
+---
+
+
+
+
+
+
+
+
 
